# hydra-mnist-mps-accelarator

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/task/model/: simple_model.yaml
configs/trainer/: mps.yaml
