[tool.poetry]
name = "lecture-11-3-a-small-project-to-see-the-big-picture"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
hydra-core = "^1.3.2"
pytorch-lightning = "^2.1.3"
torch = "^2.1.2"
torchvision = "^0.16.2"
torchmetrics = "^1.2.1"
omegaconf = "^2.3.0"
mlflow = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
